# Projeto_Bases_de_Dados

./: 00_indice  Apresentação  MySQL  README.md  Testes de Usabilidade  cenas a instalar  potato  potato.c  tutorial renato
Aplicacao/: 02_consultas.php  031_admin_cliente.php  032_admin_molde.php  033_admin_sensor.php  03_administracao.php  04_login.php  051_criar_local.php  052_instalar_local.php  05_login_local.php  central_connect.php  index.php  local_connect.php  query_cliente.php  query_consulta.php  query_copiar_cliente.php  query_instalar_local.php  query_sensor_temp.php  query_validar.php  resultado_consulta.php  temp_local_connect.php  test.php
Aplicacao2/: 031_admin_cliente.php  032_admin_molde.php  034_admin_eliminar.php  03_administration.html  051_criar_local.php  05_login_local.php  index.php  local_connect.php  query.php  query_copiar_cliente.php  query_criar_cliente.php  query_databases.php  query_molde_temp.php  query_sensor.php  query_sensor_temp.php  query_validar.php
Aplicacao_futuro/: 02_consultas.php  031_admin_cliente.php  032_admin_molde.php  034_admin_eliminar.php  03_administracao.php  052_instalar_local.php  05_login_local_off.php  05_registar.html  index.html  index.php  query.php  query_consulta.php  query_criar_cliente.php  query_databases.php  query_instalar_local.php  query_molde.php  query_molde_temp.php  query_sensor.php
Aplicação/: 01_main.html  02_consultas.html  02_consultas.php  031_admin_cliente.php  032_admin_molde.php  033_admin_sensor.php  034_admin_eliminar.php  03_administracao.php  03_administration.html  03_administration.php  04_login.html  04_login.php  051_criar_local.php  052_instalar_local.php  05_login_local.php  05_registar.html  central_connect.php  index.php  local_connect.php  query.php  query_consulta.php  query_databases.php  query_instalar_local.php  query_molde.php  query_sensor.php  resultado_consulta.php
Bases de Dados/Práticas/: aula1_bloco_codigo.rtf
Bases de Dados/Trabalho final/: Apresentação_P3G9_v1.5.docx  Apresentação_P3G9_v1.pptx  Diagrama-3.xml  Diagrama-31.xml  Diagrama_4v1.xml  Esquema-2v2.xml  Esquema3.xml  p3g9.txt
Clientes/: run_all  run_all.c
Clientes/Cliente01/: CMakeLists.txt
Clientes/Cliente01/src/: myf.c  simulador.c
Clientes/Cliente01/src/simulador/: myf.c  myf.h  prototypes.h  simulador.c
Clientes/Cliente02/: CMakeLists.txt
Clientes/Cliente02/src/: myf.c  simulador.c
Docs/: Como fazer backups  Como inciar o sistema  Instalação  Testes de Usabilidade
Docs/Tese/: example.aux  example.bbl  example.blg  example.lof  example.lot  example.out  example.tex  example.toc  uaThesis.sty
Docs/Tese Joana/: Tese_Joana.acn  Tese_Joana.acr  Tese_Joana.alg  Tese_Joana.aux  Tese_Joana.bbl  Tese_Joana.blg  Tese_Joana.glg  Tese_Joana.ist  Tese_Joana.lof  Tese_Joana.lot  Tese_Joana.out  Tese_Joana.run.xml  Tese_Joana.tex  Tese_Joana.toc  grafcet.aux  hapticsconnectionsdiagram.tex  myBib.bib  testeteste.ods  uaThesis.sty  uaThesis_.sty
Docs/Teste/: teste.aux  teste.out  teste.tex  teste.toc
Docs/lab_report_1/: lab_report_1.blg  lab_report_1.tex
Empresa/: CMakeLists.txt
Empresa/Backups/: backup_10001_9000_2018-07-31 17:45:04_2018-07-31 17:48:05.sql  backup_10001_9000_2018-07-31 17:49:05_2018-07-31 17:52:05.sql  backup_10001_9000_2018-07-31 17:53:05_2018-07-31 17:53:05.sql  backup_10001_9000_2018-07-31 18:35:35_2018-07-31 18:44:36.sql  backup_10001_9000_2018-07-31 18:45:36_2018-07-31 18:49:37.sql  backup_10001_9000_2018-08-01 00:26:54_2018-08-01 00:30:55.sql  backup_10001_9001_2018-07-31 17:45:04_2018-07-31 17:48:05.sql  backup_10001_9001_2018-07-31 17:49:05_2018-07-31 17:52:05.sql  backup_10001_9001_2018-07-31 17:53:05_2018-07-31 17:53:05.sql  backup_10001_9001_2018-07-31 18:35:35_2018-07-31 18:44:36.sql  backup_10001_9001_2018-07-31 18:45:36_2018-07-31 18:49:37.sql  backup_10001_9001_2018-08-01 00:26:54_2018-08-01 00:30:55.sql  backup_10001_9002_2018-07-31 17:45:04_2018-07-31 17:48:05.sql  backup_10001_9002_2018-07-31 17:49:05_2018-07-31 17:52:05.sql  backup_10001_9002_2018-07-31 17:53:05_2018-07-31 17:53:05.sql  (+70 more)
Empresa/gestor_backups/: CMakeLists.txt
Empresa/gestor_backups/src/: concatenar.c  gerar.c  gestor_backups.c  myf.c  myf.h  prototypes.h
Queries/: MySQL_cl_dataset.sql  MySQL_cl_setup.sql  MySQL_dataset.sql  MySQL_delete.sql  MySQL_setup.sql  MySQL_temp_dataset.sql  MySQL_temp_delete.sql  MySQL_temp_setup.sql  MySQLv1.sql  SQLQuery7.2_f.sql  Tutorial  central.sql  users_backup.sql  users_central.sql  users_local.sql  users_temp.sql
(+86 files in other folders)
